--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=Sentiment-Analysis
 
 
+logging.level.root=warn
+
 spring.main.banner-mode=off
 
 spring.datasource.url=jdbc:h2:mem:testdb
