added missing folder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.h2.console.enabled=true
 
 # application.properties
 #webdriver.chrome.driver.path=path/to/your/chromedriver.exe
+
+# Gemini API Key for review summarization
+#gemini.api.key=AIzaSyC2WJHCBiw1FFUW8e53qCx67M24ELMFkvk
+
+google.cloud.project.id=gen-lang-client-0712719747
+google.cloud.location=asia-south1
